# Music-Clustering

./: .gitignore  ArchitectureDiagram.drawio  README.md  Untitled Diagram.drawio  pyproject.toml
prototype_jupyter/: get_playlist_from_spotify.ipynb  get_playlist_from_spotify.py
